chore: Change on README and requirements

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ PG_USER = '<pg_user>'
 PG_PASSWD = '<pg_passwd>'
 PG_HOST = '<pg_host>'
 PG_PORT = '<pg_port>'
+CELERY_BROKER_URL = '<some_broker_url>'
