--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,37 @@
+amqp==5.2.0
 asgiref==3.7.2
+billiard==4.2.0
+celery==5.4.0
+celery-progress==0.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+decorator==4.4.2
 Django==4.2.7
+django-celery-results==2.5.1
+idna==3.7
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
+kombu==5.3.7
 moviepy==1.0.3
+numpy==1.26.4
+pillow==10.3.0
+proglog==0.1.10
+prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytube==15.0.0
+redis==5.0.4
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
+tqdm==4.66.2
 tzdata==2023.3
+urllib3==2.2.1
+vine==5.1.0
+wcwidth==0.2.13
